--- a/.packit.yaml
+++ b/.packit.yaml
@@ -23,4 +23,8 @@ jobs:
   owner: dcavalca
   project: faketpm
   targets:
-    - fedora-all
+    - fedora-all-aarch64
+    - fedora-all-i386
+    - fedora-all-ppc64le
+    - fedora-all-s390x
+    - fedora-all-x86_64
